Got AGGridReact in!!!

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,6 +7,6 @@
     font-family: "Vazirmatn";
     font-style: normal;
     font-display: swap;
-    src: url("./assets/Vazirmatn[wght].woff2") format("woff2");
+    src: url("../assets/Vazirmatn[wght].woff2") format("woff2");
   }
 }
