Changed flex dir of aggrid's pagination on bigger screens

--- a/src/styles/overrides.css
+++ b/src/styles/overrides.css
@@ -15,3 +15,9 @@
 .ag-paging-panel * {
   min-width: max-content;
 }
+
+@media screen and (min-width: 55em) {
+  .ag-paging-panel {
+    flex-direction: row;
+  }
+}
